Fix(core): DialogFooter now has built-in gap
BREAKING CHANGE

--- a/core/src/dialog/sub/sub.module.css
+++ b/core/src/dialog/sub/sub.module.css
@@ -13,4 +13,5 @@
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
+	gap: 8px;
 }
